[tool.poetry]
name = "pizzabot"
version = "0.1.0"
description = "A Slack bot that let the users know wheter it's Crazy Tuesday or not"
authors = ["David Svenson <davidsvenson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^18.1.0"
dj_database_url = "^0.5.0"
django = "^2.2"
djangorestframework = "^3.11.2"
rollbar = "^0.14.2"
slackclient = "^1.2.1"
slackeventsapi = "^1.1.0"
uwsgi = "^2.0.17.1"
zappa = "^0.50.0"

[tool.poetry.dev-dependencies]
freezegun = "^0.3.10"
pytest = "^3.7.1"
pytest-django = "^3.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
